src/metrics/snapshots/big_code_analysis__metrics__npm__tests__ruby_symbol_argument_reads_non_identifier_method_names.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 0,
  "interface_npm_sum": 0,
  "class_methods": 4,
  "interface_methods": 0,
  "class_coa": 0.0,
  "interface_coa": 0.0,
  "total": 0,
  "total_methods": 4,
  "coa": 0.0
}
