src/metrics/snapshots/big_code_analysis__metrics__npm__tests__ruby_visibility_call_on_another_object_declares_but_does_not_refile.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 3,
  "interface_npm_sum": 0,
  "class_methods": 3,
  "interface_methods": 0,
  "class_coa": 1.0,
  "interface_coa": 0.0,
  "total": 3,
  "total_methods": 3,
  "coa": 1.0
}
