src/metrics/snapshots/big_code_analysis__metrics__npm__tests__ruby_visibility_call_wrapping_def_counts_the_method.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 2,
  "interface_npm_sum": 0,
  "class_methods": 3,
  "interface_methods": 0,
  "class_coa": 0.6666666666666666,
  "interface_coa": 0.0,
  "total": 2,
  "total_methods": 3,
  "coa": 0.6666666666666666
}
