src/metrics/snapshots/big_code_analysis__metrics__npm__tests__rust_trait_impl_block_counts_methods.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 0,
  "interfaces": 1,
  "class_methods": 1,
  "interface_methods": 1,
  "class_coa": 0.0,
  "interface_coa": 1.0,
  "total": 1,
  "total_methods": 2,
  "coa": 0.5
}
