src/metrics/snapshots/big_code_analysis__metrics__npm__tests__tsx_default_public_methods.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 2,
  "interfaces": 0,
  "class_methods": 2,
  "interface_methods": 0,
  "class_coa": 1.0,
  "interface_coa": 0.0,
  "total": 2,
  "total_methods": 2,
  "coa": 1.0
}
