src/metrics/snapshots/big_code_analysis__metrics__npm__tests__tsx_multiple_classes_and_interface.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 1,
  "interface_npm_sum": 1,
  "class_methods": 2,
  "interface_methods": 1,
  "class_coa": 0.5,
  "interface_coa": 1.0,
  "total": 2,
  "total_methods": 3,
  "coa": 0.6666666666666666
}
