src/metrics/snapshots/big_code_analysis__metrics__npm__tests__typescript_abstract_class_methods.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 3,
  "interfaces": 0,
  "class_methods": 5,
  "interface_methods": 0,
  "class_coa": 0.6,
  "interface_coa": 0.0,
  "total": 3,
  "total_methods": 5,
  "coa": 0.6
}
