src/metrics/snapshots/big_code_analysis__metrics__npm__tests__typescript_arrow_field_counts_as_method.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 1.0,
  "interfaces": 0.0,
  "class_methods": 2.0,
  "interface_methods": 0.0,
  "classes_average": 0.5,
  "interfaces_average": null,
  "total": 1.0,
  "total_methods": 2.0,
  "average": 0.5
}
